--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap3": "^3.3.5",
     "jquery": "^3.4.1",
+    "node-sass": "^4.13.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -40,6 +41,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.0.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
