--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap3": "^3.3.5",
+    "element-ui": "^2.13.0",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
     "vue": "^2.5.2",
